# nvidia-rtx-vsr-comfyui-toolkit

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_instructions.md
comfyui/: NODES.md  install_nodes.ps1  install_nodes.sh
comfyui/custom_nodes/rtx_vsr_single_frame_node/: README.md  __init__.py  rtx_vsr_single_frame_node.py
comfyui/workflows/: rtx_vsr_image_workflow.json  rtx_vsr_single_frame_workflow.json  rtx_vsr_video_workflow.json
comfyui/workflows/examples/: 01_quick_4x_upscale.json  02_before_after_preview.json  03_2x_vs_4x_comparison.json  04_denoise_then_upscale.json  05_video_frame_sampler.json  06_upscale_then_crop_tile.json  07_ai_gen_image_enhance.json  README.md
docs/: comparison_methodology.md  implementation_notes.md  models.md  troubleshooting.md
models/: README.md
scripts/: benchmark_rtx_vsr.py  check_environment.py  extract_frame_test.py  test_rtx_vsr.py  upscale_image_rtx_vsr.py  upscale_video_rtx_vsr.py
